tests/build/cases/widget_new/property_generic1.stderr
error[E0283]: type annotations needed
 --> cases/widget_new/property_generic1.rs:7:9
  |
7 |         value = 0;
  |         ^^^^^ cannot infer type of the type parameter `T` declared on the struct `value`
  |
  = note: cannot satisfy `_: VarValue`
note: required by a bound in `zero_ui::widgets::toggle::value::<T>::__new__`
 --> $WORKSPACE/zero-ui/src/widgets/toggle_wgt.rs
  |
  |     pub fn value<T: VarValue + PartialEq>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
  |                     ^^^^^^^^ required by this bound in `zero_ui::widgets::toggle::value::<T>::__new__`
help: consider specifying the generic argument
    |
7   |         value::<T> = 0;
    |              +++++
